--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ __pycache__/
 
 # Log files
 *.log
+
+# Ignore environment configuration files containing sensitive data
+.env              
+.env.local         
+.env.[mode]         
+.env.[mode].local   
